# Provisio

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .gitignore  Makefile  __init__.py  docker-compose.yml  main.py  pyproject.toml
backend/source/: __init__.py  consts.py  pod.py  tools.py
frontend/: Dockerfile  Makefile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/source/: index.js
frontend/src/: App.tsx  index.tsx  objects.tsx  routes.tsx
frontend/src/components/: Picture.tsx  PictureList.tsx  navBar.tsx
frontend/src/example/: AddTodoForm.tsx
frontend/src/pictures/: Picture.tsx  PictureList.tsx
frontend/src/styles/: App.css  styles.css  styles.scss
frontend/src/types/: types.d.ts
frontend/src/views/: home.tsx  pod.tsx
frontend/views/: index.pug
html/: pod.html
nasa_pod_api/: Dockerfile  config.json  docker-compose.yml  main.py  pyproject.toml
nasa_pod_api/source/: __init__.py  consts.py  pod.py
nginx/config/: nginx.conf
nginx/config/conf.d/sites-avaliable/: website.conf
source/: __init__.py  pod.py  tools.py
website/: Makefile  package.json
website/src/: App.tsx
website/src/example/: TodoList.tsx  TodoListItem.tsx
website/src/types/: types.d.ts
